# Gear-Ledger

./: .gitignore  BUILD_INSTRUCTIONS.md  BUILD_OPTIONS.md  GearLedger.spec  ICON_GUIDE.md  PERFORMANCE_OPTIMIZATIONS.md  PERFORMANCE_TIPS.md  README.md  README_BUILD.md  app_desktop.py  build_exe.py  build_nuitka.py  create_icon.py  easyocr_test.py  install_dependencies.py  ocr_app.py  pyproject.toml  requirements.txt
gearledger/: __init__.py  api_client.py  camera.py  cli.py  config.py  data_layer.py  database.py  excel_utils.py  gpt_utils.py  heuristics.py  image_utils.py  invoice_generator.py  logging_utils.py  network_discovery.py  ocr_utils.py  pipeline.py  piper_tts.py  result_ledger.py  server.py  speech.py
gearledger/desktop/: camera.py  camera_widget.py  logs_widget.py  main_window.py  network_settings_dialog.py  process_helpers.py  results_pane.py  results_widget.py  scale.py  scale_widget.py  settings_manager.py  settings_page.py  settings_widget.py  sse_client.py  translations.py
invoices/: generated from result.xls  invoice.xls  new invoice.xls
src/: config.py  gpt_utils.py  heuristics.py  image_utils.py  logging_utils.py
